--- a/comp-scorm/comp-scorm.html
+++ b/comp-scorm/comp-scorm.html
@@ -1,8 +1,8 @@
 <!doctype html>
 
 	<!-- HTML 5 boilerplate
-		* Sets character set to utf-8, and viewport of the page to the width of the device
-		* Setup for meta information: title [tab], description, author 
+		* Sets language to English, character set to utf-8, and viewport of the page to the width of the device
+		* Setup for meta information: title [tab], description
 		* Setup for Open Graph (og) title, type, url, and description
 		* Links HTML file to CSS file
 	 -->
@@ -13,115 +13,109 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 		<title>Compounding</title>
-		<meta name="description" content="Flash Player 32 Compounding English game">
-		<meta name="author" content="Henchel Santillan">
+		<meta name="description" content="Flash 32 Game: Compounding [ENGL]">
 
 		<meta property="og:title" content="Compounding">
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="VALID_URL">
-		<meta property="og:description" content="Flash Player 32 Compounding English game">
+		<meta property="og:description" content="Flash 32 Game: Compounding [ENGL]">
 
 		<link rel="stylesheet" href="comp-scorm.css?v=1.0">
 	</head>
 
 
-	<!-- BEGIN CONTENT -->
+	<!-- BEGIN BODY -->
 
 	<body>
-		<!-- div element for keeping all content in a single box -->
-		<div id="masterbox" align="center"> 
 
-			<!-- div element for the header of the setup page -->
-			<div class="setupheader">
-				<h3 id="headeralignleft">Compounding</h3>
-				<h3 id="headeralignright">Instructions</h3>
-				<div style="clear: both;"></div>
-			</div>
+		<!-- <div> element for the bounding box of the game -->
+		<div id="game-box" align="center">
 
 
-			<!-- div element for the setup instructions of the game -->
-			<div id="setuptext" class="setuptext">
-				<p class="instr-text">This is a learning task, not a test. It helps you explore compounding. Don't worry if you don't get it right the first time. The idea is to learn.</p>
-				<p class="instr-text">Identify the lexical category for each component word and for the compound word. To do this, simply select the appropriate lexical category from the drop down list.</p>
-				<p class="instr-text">To check your solution, click the "check" button. If you have answered correctly, move on to the next word by clicking on the next arrow at the bottom of the screen. Otherwise, try again. After three unsuccessful attempts, the correct answer will be provided for you.</p>
-			</div>
-
-
-			<!-- div element for the one-shot animation of gameplay in the setup page. Note that the elements should still be interactive in this state. -->
-			<div class="playarea">
-				<p id="bigword">makeup</p>
-				<hr>
-
-				<div class="dropdowntree">
-					<!-- Top dropdown -->
-					<select id="masterList" class="dropdown">
-						<optgroup class="options-group">
-							<option value="select a type">select a type</option>
-							<option value="Noun" selected>Noun</option>
-							<option value="Verb">Verb</option>
-							<option value="Preposition">Preposition</option>
-							<option value="Adjective">Adjective</option>
-						</optgroup>
-					</select>
-
-					<!-- Bottom-left dropdown -->
-					<div class ="bottom-total">
-						<div class="bottom">
-							<select id="compleft" class="dropdown">
-								<optgroup class="options-group">
-									<option value="select a type">select a type</option>
-									<option value="Noun">Noun</option>
-									<option value="Verb" selected>Verb</option>
-									<option value="Preposition">Preposition</option>
-									<option value="Adjective">Adjective</option>
-								</optgroup>
-							</select>
-
-							<!-- label is for the first part of the 2-part compound word -->
-							<label id="compleft-label" class="select-label" for="compleft">make</label>
-						</div>
-
-						<!-- Bottom-right dropdown -->	
-						<div class="bottom">
-							<select id="compright" class="dropdown">
-								<optgroup class="options-group">
-									<option value="select a type">select a type</option>
-									<option value="Noun">Noun</option>
-									<option value="Verb">Verb</option>
-									<option value="Preposition" selected>Preposition</option>
-									<option value="Adjective">Adjective</option>
-								</optgroup>
-							</select>
-
-							<!-- label if for the second part of the 2-part compound word -->
-							<label id="compright-label" class="select-label" for="compright">up</label>
-						</div>
-					</div>
-
-				</div>
-			</div> 
-
-
-			<!-- div element for the footer of the setup page
-			Note the starting state of instrbutton and checkbutton is 'disabled' -->
-			<div class="setupfooter">
-				<button class="fbutton" id="instrbutton" onclick="showInstructions()" disabled>
-					<img class="fimg" src="internal/instrbutton_img.png" align="left"/>  Instructions
-				</button>
-
-				<button class="fbutton" id="nextbutton" onclick="next()">
-					<img class="fimg" src="internal/nextbutton_img.png" align="left"/> Next
-				</button>
-
-				<button class="fbutton" id="checkbutton" onclick="check()" disabled>
-					<img class="fimg" src="internal/checkbutton_img.png" align="left"/> Check
-				</button>
-			</div>
+		<!-- <div> element for the game header -->
+		<div id="game-header">
+			<h3 id="header-left">Compounding</h3>
+			<h3 id="header-right">Instructions</h3>
+			<div style="clear: both;"></div>
 		</div>
 
 
-		<!-- div element to be used for the modal -->
-		<div id="instr-modal" class="modal-template">
+		<!-- <div> element for the setup instructions text -->
+		<div id="setup-text">
+			<p class="ins-text">This is a learning task, not a test. It helps you explore compounding. Don't worry if you don't get it right the first time. The idea is to learn.</p>
+			<p class="ins-text">Identify the lexical category for each component word and for the compound word. To do this, simply select the appropriate lexical category from the drop down list.</p>
+			<p class="ins-text">To check your solution, click the "check" button. If you have answered correctly, move on to the next word by clicking on the next arrow at the bottom of the screen. Otherwise, try again. After three unsuccessful attempts, the correct answer will be provided for you.</p>			
+		</div>
+
+
+		<!-- <div> element for the play area (reusable HTML template) -->
+		<div id="play-area">
+			<p id="main-word">makeup</p>
+			<hr>
+
+
+			<!-- <div> element for the drop down tree in the play area -->
+			<div id="dd-tree">
+
+				<!-- Top dropdown for the main-word -->
+				<select id="main-list", class="dropdown">
+					<option value="select a type">select a type</option>
+					<option value="Noun" selected>Noun</option>
+					<option value="Verb">Verb</option>
+					<option value="Preposition">Preposition</option>
+					<option value="Adjective">Adjective</option>					
+				</select>
+
+
+				<!-- <div> element to encompass both of the bottom dropdown -->
+				<div id="dd-bottom">
+
+					<!-- <div> element for bottom left dropdown for the first component -->
+					<div class="dd-bottom-inner">
+						<select id="left-list" class="dropdown">
+							<option value="select a type">select a type</option>
+							<option value="Noun">Noun</option>
+							<option value="Verb" selected>Verb</option>
+							<option value="Preposition">Preposition</option>
+							<option value="Adjective">Adjective</option>	
+						</select>
+
+						<label id="left-label" class="list-label" for="left-list">make</label>
+					</div>
+
+					<!-- <div> element for bottom right dropdown for the second component -->
+					<div class="dd-bottom-inner">
+						<select id="right-list" class="dropdown">
+							<option value="select a type">select a type</option>
+							<option value="Noun">Noun</option>
+							<option value="Verb">Verb</option>
+							<option value="Preposition" selected>Preposition</option>
+							<option value="Adjective">Adjective</option>	
+						</select>
+
+						<label id="right-label" class="list-label" for="right-list">up</label>
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+
+		<!-- <div> element for button footer -->
+		<div id="game-footer">
+			<button id="ins-button" class="fbutton" onclick="showInstructions()" disabled>
+				<img class="fimg" src="internal/instrbutton_img.png" align="left"/> Instructions</button>
+			<button id="next-button" class="fbutton" onclick="next()">
+				<img class="fimg" src="internal/nextbutton_img.png" align="left"/> Next</button>
+			<button id="check-button" class="fbutton" onclick="check()" disabled>
+				<img class="fimg" src="internal/checkbutton_img.png" align="left"/>Check</button>
+		</div>
+
+
+		<!-- <div> element to be used for the modal -->
+		<div id="ins-modal" class="modal-template">
 			<div class="modal-content">
 				<span class="close">&times;</span>
 				<p id="modal-text"></p>
@@ -129,9 +123,11 @@
 		</div>
 
 
-	<script src="comp-scorm.js"></script>
+        <!-- Links JS file -->
+		<script src="comp-scorm.js"></script>
 	</body>
 
-	<!-- END CONTENT -->
+	<!-- END BODY -->
+
 
 </html>
