--- a/comp-scorm/comp-scorm.html
+++ b/comp-scorm/comp-scorm.html
@@ -114,13 +114,11 @@
 		</div>
 
 
-		<!-- <div> element to be used for the modal -->
-		<div id="ins-modal" class="modal-template">
-			<div class="modal-content">
-				<span class="close">&times;</span>
-				<p id="modal-text"></p>
-			</div>			
-		</div>
+		<!-- <div> element for modals with long content -->
+		<div id="modal-template" class="modal-content">
+			<span class="close">close</span>
+			<p id="modal-text"></p>
+		</div>	
 
 
         <!-- Links JS file -->
