--- a/comp-scorm/comp-scorm.html
+++ b/comp-scorm/comp-scorm.html
@@ -109,6 +109,17 @@
 
 			</div>
 
+				<!-- <svg> element to contain the lines -->
+				<svg id="line-svg" version="1.1" xmlns="http://www.w3.org/2000/svg">
+					<line id="line-left" class="tree-lines"></line>
+				    <line id="line-right" class="tree-lines"></line>
+
+				    <circle id="circle-tl" class="circle-bg"></circle>
+				    <circle id="circle-bl" class="circle-bg"></circle>
+				    <circle id="circle-tr" class="circle-bg"></circle>
+				    <circle id="circle-br" class="circle-bg"></circle>
+				</svg>
+
 		</div>
 
 
@@ -132,12 +143,6 @@
 
 		<!-- <div> element for the blurred background on showing the modal -->
 		<div id="blocker"></div>
-
-		<!-- <svg> element to contain the lines -->
-		<svg id="line-svg" version="1.1" xmlns="http://www.w3.org/2000/svg">
-			<line id="line-left" class="tree-lines"></line>
-		    <line id="line-right" class="tree-lines"></line>
-		</svg>
 
 
         <!-- Links JS file -->
