--- a/comp-scorm/comp-scorm-v2/comp-scorm-v2.html
+++ b/comp-scorm/comp-scorm-v2/comp-scorm-v2.html
@@ -143,14 +143,24 @@
 			<div id="game-footer">
 				<button id="ins-button" class="fbutton" onclick="showInstructions()" disabled>
 					<img class="fimg" src="internal/instrbutton_img.png" align="left"/> Instructions</button>
-				<button id="next-button" class="fbutton" onclick="next()">
+				<button id="next-button" class="fbutton" onclick="next()" disabled>
 					<img class="fimg" src="internal/nextbutton_img.png" align="left"/> Next</button>
 				<button id="check-button" class="fbutton" onclick="check()" disabled>
 					<img class="fimg" src="internal/checkbutton_img.png" align="left"/>Check</button>
 			</div>
-			
 
 		</div>	    <!-- #game-box -->
+
+
+		<!-- Score Table -->
+		<table id="score-table">
+			<tr id="table-headings">
+				<th>Compound, Component 1, Component 2</th>
+				<th>Lexical Categories</th>
+				<th>Your Answer</th>
+			</tr>
+		</table>
+		
 
 
 		<!-- <div> element for modals with long content -->
