-v2 end of game updates

--- a/comp-scorm/comp-scorm-v2/comp-scorm-v2.html
+++ b/comp-scorm/comp-scorm-v2/comp-scorm-v2.html
@@ -152,14 +152,14 @@
 		</div>	    <!-- #game-box -->
 
 
-		<!-- Score Table -->
+		<!-- Score Table 
 		<table id="score-table">
 			<tr id="table-headings">
 				<th>Compound, Component 1, Component 2</th>
 				<th>Lexical Categories</th>
 				<th>Your Answer</th>
 			</tr>
-		</table>
+		</table>-->
 		
 
 
